# DriftWatch

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  GITHUB_ISSUES.md  README.md  ROADMAP.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  specs.md
.agent/skills/quality_check/: SKILL.md
.github/workflows/: ci.yml  docs.yml  publish.yml
api/detectors/: index.html
api/integrations/: index.html
api/monitor/: index.html
api/reports/: index.html
architecture/: index.html
changelog/: index.html
contributing/: index.html
detectors_guide/: index.html
docs/: architecture.md  changelog.md  contributing.md  detectors_guide.md  getting-started.md  index.md
docs/api/: detectors.md  integrations.md  monitor.md  reports.md
docs/examples/: basic.md  custom-detectors.md  multi-drift.md  notebooks.md  production.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/integrations/: cli.md  email.md  fastapi.md  mlflow.md  slack.md
docs/stylesheets/: extra.css
docs/user-guide/: detectors.md  drift-explain.md  drift-types.md  monitoring.md  reports.md  thresholds.md
examples/: basic_usage.py  fastapi_demo.py
examples/basic/: index.html
examples/custom-detectors/: index.html
examples/multi-drift/: index.html
examples/notebooks/: advanced_customization.ipynb  cli_tutorial.ipynb  complete_showcase.ipynb  drift_detection_tutorial.ipynb  index.html  mlflow_tracking.ipynb  multi_drift_tutorial.ipynb
examples/production/: index.html
getting-started/: index.html
getting-started/concepts/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
integrations/cli/: index.html
integrations/email/: index.html
integrations/fastapi/: index.html
integrations/mlflow/: index.html
integrations/slack/: index.html
search/: search_index.json
src/driftwatch/: __init__.py  py.typed
src/driftwatch/cli/: __init__.py  main.py
src/driftwatch/core/: __init__.py  concept_monitor.py  drift_suite.py  monitor.py  prediction_monitor.py  report.py
src/driftwatch/dashboard/: __init__.py  app.py  components.py
src/driftwatch/detectors/: __init__.py  base.py  categorical.py  numerical.py  registry.py
src/driftwatch/explain/: __init__.py  stats.py  visualize.py
src/driftwatch/integrations/: __init__.py  alerting.py  email.py  fastapi.py  mlflow.py
src/driftwatch/simulation/: __init__.py
tests/: conftest.py  test_email_alerting.py  test_mlflow_integration.py  test_slack_alerting.py
tests/integration/: __init__.py  conftest.py  test_edge_cases.py  test_full_workflow.py  test_mixed_dtypes.py  test_multi_drift_scenarios.py
tests/unit/: test_concept_monitor.py  test_drift_suite.py  test_explain.py  test_monitor.py  test_prediction_monitor.py  test_report.py
tests/unit/test_detectors/: test_categorical.py  test_new_detectors.py  test_numerical.py  test_registry.py
user-guide/detectors/: index.html
user-guide/drift-explain/: index.html
user-guide/drift-types/: index.html
user-guide/monitoring/: index.html
user-guide/reports/: index.html
user-guide/thresholds/: index.html
